fix shopping cart and delete user bugs

--- a/Views/Cart/EmptyShoppingCart.cshtml
+++ b/Views/Cart/EmptyShoppingCart.cshtml
@@ -2,5 +2,5 @@
 <div class="pageRoot">
     <h2>Jouw winkelmand</h2>
     <hr>
-    Je winkelmand is momenteel leeg. Bekijk de <a asp-controller="Home" asp-action="index">Product pagina</a> voor producten.
+    Je winkelmand is momenteel leeg. Bekijk de <a asp-controller="Category" asp-action="index">Product pagina</a> voor producten.
 </div>
