another error check + weergave van de error message

--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -72,7 +72,7 @@
                 
                   
             
-     @ViewData["message"]   
+     <p style="background-color:Tomato;">@ViewData["message"] </p>  
     <form asp-action="Create" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
