--- a/Views/Products/Create2.cshtml
+++ b/Views/Products/Create2.cshtml
@@ -36,7 +36,7 @@
     <h4>Voeg producten toe aan de webshop</h4>
     <div class="row">
         <div class="col-md-4">
-            @ViewData["message"]
+            <p style="background-color:Tomato;">@ViewData["message"] </p>  
             <form action="@Url.Action("Create3", "Products")" method="get">
                 <div id="container" class="form-group"></div>
                 <div class="form-group">
