Fix productsoort bewerken

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="@Url.Action("Create", "Products")">Maak product soort aan</a>
                     <a class="dropdown-item" href="@Url.Action("Create2", "Products")">Voeg product toe</a>
+                    <a class="dropdown-item" href="@Url.Action("ChooseProductsoort", "Products")">Bewerk productsoort</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "UploadFiles")">Voeg meerdere producten</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "CategoryList")">Overzicht Product Categorieën</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "ProductList")">Overzicht Producten</a>
