add email to the orders table

--- a/Views/Cart/sendOrderMail.cshtml
+++ b/Views/Cart/sendOrderMail.cshtml
@@ -8,6 +8,6 @@
     <hr>
     @Html.TextBoxFor(model => model.Email)
     @Html.ValidationMessageFor(model => model.Email)
-    <input type="submit" class="btn btn-primary" value="Door gaan" asp-controller="cart" asp-action="EmailOrder">
+    <input type="submit" class="btn btn-primary" value="Door gaan" asp-controller="cart" asp-action="pay">
 }
 </div>
