--- a/Views/Products/Editproductsoort.cshtml
+++ b/Views/Products/Editproductsoort.cshtml
@@ -8,11 +8,19 @@
 
             <form asp-action="Editproductsoort">
                 <div class="form-group">
-                        <input name="newproductsoort" class="form-control" placeholder="Categorie Naam"/>
+                        <input asp-for="@Model.newproductsoort" class="form-control" placeholder="Categorie Naam"/>
+                        <span asp-validation-for="@Model.newproductsoort" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                        <input name="oudeproductsoort" class="form-control" value ="@Model.oudeproductsoort" type = "hidden" />
+                        <input asp-for="@Model.oldproductsoort"  type = "hidden" />
                 </div>
+                @for (var i = 0; i < Model.atributes.Count; i++)
+                    {
+                        <label asp-for="@Model.atributes[i].Attrbuut" class="control-label">@Model.atributes[i].Attrbuut</label>
+                        <input Class="form-control" asp-for="@Model.atributes[i].Attrbuut" value="" placeholder="@Model.atributes[i].Attrbuut"/> 
+                        <input type = "hidden" asp-for="@Model.atributes[i].Id" /> 
+                        <hr>                                                                                  
+                    }
                 <div class="form-group">
                     <input type="submit" value="Updaten" class="btn btn-primary"/>
                 </div>          
